new lectures files added.

--- a/Day4/Classification.ipynb
+++ b/Day4/Classification.ipynb
@@ -75,7 +75,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "e626d547-2364-44a1-b054-19e1f0b66a33",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -408,7 +414,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "fcbabea8-e612-4b61-b4af-46119c923ce1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -748,7 +760,13 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "e968862f-e960-46bc-a9ee-43167046fd63",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -940,7 +958,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "e2b8189f-9d01-4954-8f2b-db22fa8666dc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -999,7 +1023,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "61cad58e-523e-476b-ac9b-8cf6ba11ef3b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1055,7 +1085,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "fa7f1927-836b-4841-b72e-c7618f576a1f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2256,7 +2292,13 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "24a85531-8926-44ab-aa81-c8f011c8cbfa",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2659,7 +2701,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "9514dfe7-e2cf-4e8f-be63-7f316476d5d6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2683,7 +2731,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "68c5f27d-852c-480d-855b-01063aefa307",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
